--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2°a CESB</title>
+    <title>carros</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Adicione uma imagem" alt="Img Icon">
+        <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/carros-rebaixados2-main/images.jpeg" alt="Img Icon">
+        <img class="cabecalho-imagem" src="/home/escola/Área de Trabalho/carros-rebaixados2-main/golf-sapao-rebaixado-fotos.jpg" alt="Img Icon">
         <ul class="cabecalho-lista">
-           <li class="cabecalho-itens">Projetos</li>
-		 <li class="cabecalho-itens">Alunos</li>
-		 <li class="cabecalho-itens">Quem Somos?</li>
+           <li class="cabecalho-itens">carros</li>
+		 <li class="cabecalho-itens">de luxo</li>
+		 <li class="cabecalho-itens">baixos</li>
         </ul>
     </header>
 </body>
